fixed price wrapping to new line

--- a/src/molecules/ShoppingCart/ShoppingCartItem.pcss
+++ b/src/molecules/ShoppingCart/ShoppingCartItem.pcss
@@ -149,6 +149,7 @@
       &__container {
         display: grid;
         grid-template-columns: auto 2rem;
+        width: 100px;
       }
 
       &__number {
